# bq-evm-ui

./: LICENSE.md  README.md  index.html  package.json  postcss.config.js  svelte.config.js  tailwind.config.js
.github/workflows/: publish-to-release.yaml
arduino/: feather-evm.ino
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Connect.svelte  OpenPort.svelte  Polling.svelte  PortHeader.svelte  PrintPorts.svelte  ReadPort.svelte  StatusCode.ts  Terminal.svelte
