[package]
name = "bq-evm"
version = "0.1.0"
description = "A GUI for interfacing with the BQ76925-EVM using an Arduino Board"
authors = ["Muki Kiboigo"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { version = "4.3.0", default-features = false }
memchr = "2.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
